Financial Accounting Blazor

--- a/Financial_Accounting_Blazor/appsettings.json
+++ b/Financial_Accounting_Blazor/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=CANYON;Database=Transaction;Trusted_Connection=True;"
+    "DefaultConnection": "Database;"
   },
   "Logging": {
     "LogLevel": {
